syntax = "proto3";

package checkout;

import "payment.proto";

option go_package = "/checkout";

service CheckoutService {
    rpc Checkout(CheckoutReq) returns (CheckoutResp) {}
}

message CheckoutReq {
    uint32 user_id = 1;
    string address = 2;
}

message CheckoutResp {
    string order_id = 1;
    string transaction_id = 2;
}