syntax = "proto3";

package order;

import "cart.proto";

option go_package = "order";

service OrderService {
  rpc PlaceOrder(PlaceOrderReq) returns (PlaceOrderResp) {}
  rpc ListOrder(ListOrderReq) returns (ListOrderResp) {}
  rpc MarkOrderPaid(MarkOrderPaidReq) returns (MarkOrderPaidResp) {}
}

message Order {
  repeated OrderItem order_items = 1;
  string order_id = 2;
  uint32 user_id = 3; // address(not unique), email, payment info
  string address = 4; // 
  int32 created_at = 5;
}

message OrderItem {
  cart.CartItem item = 1;
  float cost = 2;
}

message PlaceOrderReq {
  uint32 user_id = 1;
  string address = 2;
  string name = 3;
  repeated OrderItem order_items = 4;
}

message PlaceOrderResp {
  string order_id = 1;
}

message ListOrderReq {
  uint32 user_id = 1;
}

message ListOrderResp {
  repeated Order orders = 1;
}

message MarkOrderPaidReq {
  uint32 user_id = 1;
  string order_id = 2;
}

message MarkOrderPaidResp {}